[package]
name = "resolution-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
crc = { workspace = true }
iroh = { workspace = true, features = ["discovery-local-network", "discovery-pkarr-dht"] }
oqs = { workspace = true, features = ["vendored", "serde"] }
resolution-common = { workspace = true }
rmp = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["base64"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4", "fast-rng", "serde"] }
